--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,10 +4,20 @@
     android:layout_height="match_parent"
     tools:context="com.hupp.kotlindemo.fragment.CartFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/card_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <TextView
+        android:id="@+id/tvEmpty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:gravity="center"
+        android:text="@string/empty"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
+        android:textColor="@color/colorPrimary"/>
 
 </FrameLayout>
